@@ -7,7 +7,7 @@ Version 3.5.2b1
 
 - Source files with custom encodings declared in a comment at the top are now
   properly handled during reporting on Python 2.  Python 3 always handled them
-  properly.  This fixes `issue  157`_.
+  properly.  This fixes `issue 157`_.
 
 - Backup files left behind by editors are no longer collected by the source=
   option, fixing `issue 168`_.
@@ -15,6 +15,10 @@ Version 3.5.2b1
 - If a file doesn't parse properly as Python, we don't report it as an error
   if the filename seems like maybe it wasn't meant to be Python.  This is a
   pragmatic fix for `issue 82`_.
+
+- The ``-m`` switch on ``coverage report``, which includes missing line numbers
+  in the summary report, can now be specifed as ``show_missing`` in the
+  config file.  Closes `issue 173`_.
 
 - When running a module with ``coverage run -m <modulename>``, certain details
   of the execution environment weren't the same as for
@@ -33,6 +37,7 @@ Version 3.5.2b1
 .. _issue 157: https://bitbucket.org/ned/coveragepy/issue/157/chokes-on-source-files-with-non-utf-8
 .. _issue 166: https://bitbucket.org/ned/coveragepy/issue/166/dont-try-to-compile-c-extension-on-pypy
 .. _issue 168: https://bitbucket.org/ned/coveragepy/issue/168/dont-be-alarmed-by-emacs-droppings
+.. _issue 173: https://bitbucket.org/ned/coveragepy/issue/173/theres-no-way-to-specify-show-missing-in
 
 
 Version 3.5.1 --- 23 September 2011
